--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,9 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+
+$default-font: "Roboto", sans-serif;
+$gray: #878b98;
+$light-gray: #e8e8e8;
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: $default-font;
 }
 
 .hamburger-icon {
@@ -42,13 +46,11 @@
 }
 
 .top-nav {
-  border-color: #e8e8e8;
+  border-color: $light-gray;
+  input {
+    color: $light-gray;
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: 400;
+  }
 }
-.top-nav input {
-  color: #e8e8e8;
-  font-size: 14px;
-  line-height: 24px;
-  font-weight: 400;
-}
-
-/*# sourceMappingURL=style.css.map */
