--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,47 +10,42 @@ $light-gray: #e8e8e8;
   font-family: $default-font;
 }
 
-.hamburger-icon {
-  background: url("/img/MenuHamburger.png");
-  height: 12px;
-  width: 18px;
-  display: block;
-}
-
-.home-icon {
-  background: url("/img/Home.png");
-  height: 20px;
-  width: 17px;
-  display: block;
-}
-
-.profile-icon {
-  background: url("/img/Profile.png");
-  height: 18px;
-  width: 18px;
-  display: block;
-}
-
-.cart-icon {
-  background: url("/img/Cart.png");
-  height: 20px;
-  width: 20px;
-  display: block;
-}
-
-.gear-icon {
-  background: url("/img/Gear.png");
-  height: 19.45px;
-  width: 20px;
-  display: block;
-}
-
 .top-nav {
   border-color: $light-gray;
   input {
-    color: $light-gray;
+    color: black;
     font-size: 14px;
     line-height: 24px;
     font-weight: 400;
   }
+}
+
+input[type="checkbox"]:checked {
+  appearance: none;
+  width: 14px;
+  height: 14px;
+  border-radius: 2px;
+  border-color: #00ba76;
+  background-color: #00ba76;
+  box-shadow: 0 0 #00ba76;
+  -webkit-box-shadow: 0 0 #00ba76;
+  -moz-box-shadow: 0 0 #00ba76;
+
+  content: "\2714";
+  //font-size: 14px;
+}
+
+input[type="checkbox"] {
+  appearance: none;
+  width: 14px;
+  height: 14px;
+  border-radius: 2px;
+  border-width: 2px;
+  border: solid;
+  border-color: $light-gray;
+  cursor: pointer;
+}
+
+.hidden {
+  display: none;
 }
